--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "author": "Mikael Labrut",
   "scripts": {
     "analyze": "source-map-explorer dist/static/js/main.*",
-    "start": "nodemon src/server.js --exec babel-node",
+    "start": "nodemon src/index.js --exec babel-node",
     "prebuild": "rm -rf dist",
-    "build": "babel src/server.js --out-file ./dist/server.js",
+    "build": "babel src/index.js --out-file ./dist/index.js",
     "test": "jest --config ./config/jest.config.json --color --runInBand",
     "test:watch": "jest --config ./config/jest.config.json --watch",
     "precommit": "lint-staged",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "commitmsg": "commitlint --config ./config/commitlint.config.js -E GIT_PARAMS"
+    "commitmsg": "commitlint --config ./config/commitlint.config.js -E GIT_PARAMS",
+    "localtunnel": "lt --port 3005"
   },
   "lint-staged": {
     "*.js": [
@@ -48,6 +49,7 @@
     "jest-junit": "^5.1.0",
     "js-yaml": "^3.12.0",
     "lint-staged": "^7.2.0",
+    "localtunnel": "^1.9.1",
     "nock": "^10.0.2",
     "nodemon": "^1.18.6",
     "prettier": "^1.13.5",
