--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "analyze": "source-map-explorer dist/static/js/main.*",
     "start:dev": "nodemon src/index.js --exec babel-node",
-    "start": "babel-node src/index.js",
-    "prebuild": "rm -rf dist",
-    "build": "babel src/index.js --out-file ./dist/index.js",
+    "start": "node dist/index.js",
+    "prebuild": "rm -rf dist && mkdir dist",
+    "postinstall": "yarn prebuild && yarn build",
+    "build": "babel -d ./dist ./src",
     "test": "jest --config ./config/jest.config.json --color --runInBand",
     "test:watch": "jest --config ./config/jest.config.json --watch",
     "precommit": "lint-staged",
