--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start:dev": "nodemon src/index.js --exec babel-node",
     "start": "node dist/index.js",
     "prebuild": "rm -rf dist && mkdir dist",
+    "preinstall": "cp .env.example .env",
     "postinstall": "yarn prebuild && yarn build",
     "build": "babel -d ./dist ./src",
     "test": "jest --config ./config/jest.config.json --color --runInBand",
@@ -28,8 +29,8 @@
   "dependencies": {
     "bluebird": "^3.5.2",
     "body-parser": "^1.18.3",
-    "config": "^2.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "lodash": "^4.17.11"
   },
