--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0-development",
   "author": "Mikael Labrut",
   "scripts": {
-    "analyze": "source-map-explorer dist/static/js/main.*",
+    "analyze": "source-map-explorer dist/*",
     "start:dev": "nodemon src/index.js --exec babel-node",
     "start": "node dist/index.js",
     "prebuild": "rm -rf dist && mkdir dist",
@@ -16,7 +16,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "commitmsg": "commitlint --config ./config/commitlint.config.js -E GIT_PARAMS",
-    "localtunnel": "lt --port 3005"
+    "localtunnel": "lt --port 3000"
   },
   "engines": {
     "node": "8.x"
