feat(add-ci): add basic unit test

--- a/config/jest.config.json
+++ b/config/jest.config.json
@@ -5,6 +5,7 @@
   "coverageDirectory": "../coverage",
   "testURL": "http://localhost/",
   "testMatch": [
-    "**/*.steps.js"
+    "**/*.steps.js",
+    "**/*.test.js"
   ]
 }
